tests/paczka1/fuzzy1/78755822.err
Error in line 1: NK7VmA4DFg S546 67,1
Error in line 6: ZR4xgEbSCOS A607 14,5
Error in line 13: NK7VmA4DFg S424 97,0
Error in line 19: NK7VmA4DFg S546 70,70
Error in line 14: NK7VmA4DFg S546 34,3
Error in line 22: S424 S546 18,2
Error in line 34: HcGAnNddfl S546 -3,0
Error in line 24: S424 S244 5,6
Error in line 35: S424 A607 50,1
